samples/_failures_safe/1760887926_d0812b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c3d4572.c: In function ‘main’:
./samples/SAFE/__tmp_4c3d4572.c:165:5: error: expected declaration or statement at end of input
  165 |     Graph graph;
      |     ^~~~~
